# cern_ts_one

./: .gitignore  README.md  pyproject.toml
.github/workflows/: github-actions.yml
src/tsa_one/: __main__.py  cli.py  duplicate.py
tests/: test_detect_duplicates.py
